--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         </p>
 
         <a class="HOVER">
-        <text>Calculer mon alcoolémie</text>
+        <text>Calculer</text>
         </a>
 
       </article>
