--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
 
-    <div id="loader"></div>
+    <div id="loader">
+      <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    </div>
 
     <section id="begin-page">
 
