--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,10 @@
 
         <div class="ocean">
           <div class="wave"></div>
-          <div id="clac1"></div>
           <div class="wave"></div>
         </div>
+        
+        <div id="clac1"></div>
       </section>
     </div>
 
@@ -57,11 +58,31 @@
 
             <p>Tu pèses ? (sans vouloir être indiscret)</p>
             <div class="rep">
-              <label><input type="number">Kg</label>
+              <label><input type="number"> Kg</label>
             </div>
+
+            <p>Tu es à jeun ?</p>
+            <div class="rep">
+              <select id="country" name="country">
+                <option value="australia">Oui</option>
+                <option value="canada">Non</option>
+              </select>
+              
+            </div>
+            <br>
+
+            <a class="HOVER2" href="#first">
+              <text>On passe à l'alcool !</text>
+              </a>
+
           </div>
         </article>
       </section>
+
+      <div class="ocean ocean2">
+        <div class="wave"></div>
+        <div class="wave"></div>
+      </div>
 
 
     </div>
