--- a/public/index.html
+++ b/public/index.html
@@ -119,10 +119,13 @@
 
         <article>
           <h2>Tu as environ <span id="number-result"></span> grammes d'alcool dans le sang (à titre indicatif bien sûr)</h2>
+          <canvas id="graph"></canvas>
         </article>
 
       </section>
 
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" 
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
       <script type="text/javascript" src="hover.js"></script>
     </div>
   </body>
