--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,9 @@
       <section id="result">
 
         <article>
-          <h2>Tu as environ <span id="number-result"></span> grammes d'alcool dans le sang (à titre indicatif bien sûr)</h2>
+          <h2>Tu auras environ <span id="number-result"></span> 
+            grammes d'alcool dans le sang au maximum (à titre indicatif bien sûr)</h2>
+          <h2>Evolution au cours du temps :</h2>
           <canvas id="graph"></canvas>
         </article>
 
